--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>Hello World</h1>
-
-<button mat-button color="basic">Click</button>
-<button mat-raised-button color="accent">Click</button>
-<button mat-flat-button>Flat</button>
-<button mat-stroked-button>Stroked</button>
-<button mat-fab>Fab</button>
-<button mat-icon-button>Icon</button>
-<button mat-mini-fab>Mini Fab</button>
+<h1>Hello World - this is coming from the parent component</h1>
+<!-- assignments selector renders whatever is happening in assignments component -->
+<app-assignments></app-assignments>
