--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,3 +1,6 @@
 <p>
-  assignments works!
+  <!-- string interpolation is a binding from logic file into html file -->
+  {{title}}
+  <br>
+  {{title}}
 </p>
