--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -11,32 +11,10 @@
   
   
   
-  <form ngForm #assignmentsForm class="form">
-    
-    <mat-form-field>
-      <!-- names input assignment name -->
-      <input matInput #assignmentName [(ngModel)] = "name" name="name">
-    </mat-form-field>
-
-    <mat-form-field>
-<input matInput 
-[matDatepicker]="picker" 
-[(ngModel)]="dueDate"
-name="name" placeholder="when's your assignment due?"
->
-<mat-datepicker-toggle matSuffix 
-[for] ="picker"></mat-datepicker-toggle>
-
-    </mat-form-field>
-    <button mat-stroked-button 
-    color="primary"
-    
-    [disabled] = '!enabled'
-    
-    (click)="onSubmit(); assignmentsForm.reset()"
-    >Add Assignment</button>
-  </form>
-  
+  <main *ngIf="formVisible === false">
+  <button mat-flat-button color="accent"
+  (click)="onAddBtnClick()"
+  >Add-Assignment</button>
 
  <mat-list *ngFor="let assignment of assignments">
    <!-- date pipe converts raw date into human readable date -->
@@ -54,4 +32,7 @@ name="name" placeholder="when's your assignment due?"
   <mat-divider></mat-divider>
 </mat-list-item>
 </mat-list>
+</main>
+
+<app-add-assignment *ngIf="formVisible"></app-add-assignment>
 <app-assignment-detail [passedAssignment]="selectedAssignment"></app-assignment-detail>
