--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -12,3 +12,12 @@
     flex-direction: column;
     margin: 5px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.addButton {
+    align-self: flex-end;
+}
