--- a/src/app/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignment-detail/assignment-detail.component.html
@@ -4,8 +4,12 @@
     <mat-card-title>{{passedAssignment.name}}</mat-card-title>
     <mat-card-subtitle>{{passedAssignment.dueDate | date}}</mat-card-subtitle>
     
+    <div id="bottom">
     <mat-checkbox *ngIf="passedAssignment.submitted === false"
-    (click)="onAssignmentSubmitted()"
-    >Mark as submitted</mat-checkbox>
+    (click)="onAssignmentSubmitted()"> 
+    Mark as submitted
+  </mat-checkbox>
+    <button mat-flat-button color='warn' (click)= "onDelete()">Delete</button>
+  </div>
   </mat-card>
 </div>
