--- a/src/app/add-assignment/add-assignment.component.html
+++ b/src/app/add-assignment/add-assignment.component.html
@@ -17,9 +17,7 @@ name="name" placeholder="when's your assignment due?"
     </mat-form-field>
     <button mat-stroked-button 
     color="primary"
-    
-    
-    
     (click)="onSubmit(); assignmentsForm.reset()"
+    routerLink='/home'
     >Add Assignment</button>
   </form>
