--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <!-- assignments selector renders whatever is happening in assignments component -->
+<div class="container">
 <h1>
    <nav><a routerLink="/home">{{appName}}</a></nav> 
 </h1>
+<mat-slide-toggle color="primary" (click)="login()">
+Login
+</mat-slide-toggle>
+</div>
 <!-- router outlet replaces this -> <app-assignments></app-assignments> -->
 <router-outlet></router-outlet>
